# kyros-ai

./: .dockerignore  .editorconfig  .env.example  .gitignore  .trivyignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI_INTEGRATION.md  Makefile  NOTICE  QUICK_START.md  README.md  SECURITY.md  TESTING_GUIDE.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _inspect.py  _inspect_beam.py  _not-found.html  _not-found.txt  architecture.html  architecture.txt  developers.html  docker-compose.yml  docs.html  docs.txt  gemini_example.py  index.html  index.txt  research.html  research.txt  setup_guide.md  simulation.html  simulation.txt  sitemap.xml  (+2 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  ci.yml  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  cla.yml  codeql.yml  deploy-pages.yml  docker-publish.yml  label-sync.yml  release-notes.yml  sdk-release.yml  security-scan.yml  stale.yml
_next/static/chunks/: 0.-urvpo33nd5.js  03bhd_pp37zax.js  03zl9c4~b7hkw.js  05leau2zt-.o1.js  0_dx_r05rxov2.js  0g-0kzn~0mmjx.js  0j6rw88h504qs.js  0kdal_9m37s1l.js  0m6qh0_8sxb_c.css  0qgluv003oomx.js  0r8mqfu6.rubp.css  0xwkia832u9.8.css  0~-3b-ef_v9k5.js  12glpnva17kc-.js  167r8.sgb78r4.js  178kxh_.9e5fw.css  turbopack-02lq8tw.p2.4m.js  turbopack-0w8idh5k3ksh1.js
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
architecture/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.architecture.__PAGE__.txt  __next.architecture.txt
deploy/helm/kyros-ai/: Chart.yaml  values.yaml
deploy/helm/kyros-ai/templates/: _helpers.tpl  hpa.yaml  ingress.yaml  server-deploy.yaml  server-svc.yaml  web-deploy.yaml  web-svc.yaml
developers/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.developers.__PAGE__.txt
docs/: CNAME  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.docs.__PAGE__.txt  __next.docs.txt  architecture.md  concepts.md  configuration.md  introduction.md  openapi.json  python-sdk.md  quickstart.md  self-hosting.md  typescript-sdk.md
research/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.research.__PAGE__.txt
sdks/python/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdks/python/kyros/: __init__.py  cli.py  client.py  debug.py  exceptions.py  mcp.py  proxy.py  testing.py  types.py
sdks/python/kyros/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  llama_index.py
sdks/python/tests/: __init__.py  conftest.py  test_client.py  test_debug.py  test_proxy.py
sdks/typescript/: .eslintrc.json  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  index.ts  types.ts
sdks/typescript/src/__tests__/: client.test.ts
sdks/typescript/src/integrations/: vercel.ts
server/: .dockerignore  .env.test  .pip-audit-requirements.txt  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  _check_connections.py  alembic.ini  proxy.Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2026_05_24_1317_8c4150020997_add_entities_table.py  2026_05_24_1328_569ac10dcac4_add_bitemporal_columns_to_semantic_.py  2026_05_24_1403_7ef45fdad5be_add_event_time_and_semantic_metadata.py  2026_05_31_1548_revert_embedding_dim_to_384.py  2026_06_08_1536_b8fcfbfe81c0_add_source_episodic_id_to_semantic.py  bitemporal_partial_index.py  causal_edges.py  enable_rls.py  episodic_memories.py  memory_audit_log.py  procedural_memories.py  propagation_logs.py  semantic_edges.py  semantic_memories.py  tenants_and_agents.py  usage_events.py
server/kyros/: __init__.py  config.py  logging.py  main.py  models.py
server/kyros/api/v1/: __init__.py  admin.py  causal.py  deps.py  episodic.py  procedural.py  search.py  semantic.py  smart.py  trust.py
server/kyros/dashboard/: index.html
server/kyros/intelligence/: __init__.py  archival.py  belief.py  causal.py  compression.py  decay.py  decay_service.py  entity_resolver.py  forgetting.py  integrity.py  integrity_service.py  quality_review.py  scheduler.py  session_summarizer.py
server/kyros/middleware/: __init__.py  auth.py  usage_tracking.py
server/kyros/ml/: __init__.py  embedder.py  models.py  reranker.py  translation.py
server/kyros/proxy/: __init__.py  classifier.py  query_classifier.py
server/kyros/schemas/: __init__.py  memory.py
server/kyros/services/: __init__.py  background_tasks.py  memory_service.py
server/kyros/storage/: __init__.py  postgres.py  redis_cache.py
server/tests/: __init__.py  conftest.py  seed_data.py  seed_test_tenant.py
server/tests/integration/: test_auth.py  test_belief.py  test_causal.py  test_decay.py  test_episodic_roundtrip.py  test_integrity.py  test_migration.py  test_procedural_memory.py  test_proxy.py  test_semantic_memory.py  test_tenant_isolation.py
server/tests/load/: locustfile.py  test_ab_benchmarks.py
server/tests/unit/: test_admin_api.py  test_edge_cases.py  test_embedder_and_cache.py  test_jaccard_deduplication.py
server/tools/: inspect_beam.py  inspect_datasets.py
signatures/version1/: cla.json
simulation/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.simulation.__PAGE__.txt
usecases/: __next._full.txt  __next._tree.txt  __next.usecases.__PAGE__.txt
website/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
website/public/: .nojekyll  robots.txt
website/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
website/src/app/architecture/: page.tsx
website/src/app/components/: Footer.tsx  Navbar.tsx
website/src/app/contact/: page.tsx
website/src/app/developers/: page.tsx
website/src/app/docs/: page.tsx
website/src/app/research/: page.tsx
website/src/app/simulation/: page.tsx
website/src/app/usecases/: page.tsx
